--- a/hr-system1.0/.gitignore
+++ b/hr-system1.0/.gitignore
@@ -12,7 +12,7 @@
 
 # testing
 /coverage
-
+.env
 # next.js
 /.next/
 /out/
@@ -41,3 +41,5 @@ yarn-error.log*
 next-env.d.ts
 
 /src/generated/prisma
+
+.vercel
